# varduvimba

./: .gitignore  CMakeLists.txt  README.md  adbanner.cpp  adbanner.h  hapticfeedback.cpp  hapticfeedback.h  index.md  main.cpp  main.qml  privacy_policy.md  resources.qrc  settings.cpp  settings.h  spellcheck.cpp  spellcheck.h  vardotajs.pro
android/: AndroidManifest.xml  build.gradle
android/res/drawable/: ic_vimba.xml  ic_water.xml
android/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
android/res/values/: strings.xml
android/res/values-lv/: strings.xml
android/src/org/factory12/vardotajs/: AdBanner.java  HapticFeedback.java
content/: Banner.qml  ColourButton.qml  Help.qml  ImageButton.qml  KeyBoard.qml  KeyRow.qml  LetterRow.qml  NamedSwitch.qml  Settings.qml  Spinner.qml  TextButton.qml  YesNoDialog.qml
scripts/: main.js
